bug txiki bat karrito ikonoan

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
                 </li>
                 <li class="nav-item">
-                    <button class="btn btn-primary"><i class="fas fa-cart-arrow-down"> <span id="cantidad">0</span></i></button>
+                    <button class="btn btn-primary"><i class="fas fa-shopping-cart"></i> <span id="cantidad">0</span></button>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
