kardetan irudiak loremflickeretik

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/fontawesome-free-all.css">
 
     <link rel="stylesheet" href="style.css">
-    
+
 </head>
 
 <body>
@@ -48,7 +48,8 @@
                     <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
                 </li>
                 <li class="nav-item">
-                    <button class="btn btn-primary"><i class="fas fa-shopping-cart"></i> <span id="cantidad">0</span></button>
+                    <button class="btn btn-primary"><i class="fas fa-shopping-cart"></i> <span
+                            id="cantidad">0</span></button>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
@@ -62,6 +63,7 @@
         <div class="row">
             <div class="col-sm-3">
                 <div class="card">
+                    <img src="https://loremflickr.com/320/240/dog" />
                     <div class="card-body">
                         <h5 class="card-title">Special title treatment</h5>
                         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -71,6 +73,7 @@
             </div>
             <div class="col-sm-3">
                 <div class="card">
+                    <img src="https://loremflickr.com/320/240/cat" />
                     <div class="card-body">
                         <h5 class="card-title">Special title treatment</h5>
                         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -80,6 +83,7 @@
             </div>
             <div class="col-sm-3">
                 <div class="card">
+                    <img src="https://loremflickr.com/320/240/fish" />
                     <div class="card-body">
                         <h5 class="card-title">Special title treatment</h5>
                         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -89,6 +93,7 @@
             </div>
             <div class="col-sm-3">
                 <div class="card">
+                    <img src="https://loremflickr.com/320/240/monkey" />
                     <div class="card-body">
                         <h5 class="card-title">Special title treatment</h5>
                         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -100,12 +105,12 @@
     </div>
 
 
-       <!-- JQUERY & BOOTSTRAP -->
-       <script src="js/jquery-3.4.1.js"></script>
-       <script src="js/fontawesome-free-all.js"></script>
-       <script src="js/popper.min.js"></script>
-       <script src="js/bootstrap.js"></script>
-        <script src="app.js"></script>
+    <!-- JQUERY & BOOTSTRAP -->
+    <script src="js/jquery-3.4.1.js"></script>
+    <script src="js/fontawesome-free-all.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
