--- a/index.html
+++ b/index.html
@@ -61,46 +61,46 @@
 
     <div class="container mt-1">
         <div class="row">
-            <div class="col-sm-3">
-                <div class="card">
-                    <img src="https://loremflickr.com/320/240/dog" />
-                    <div class="card-body">
-                        <h5 class="card-title">Special title treatment</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        <a href="#" class="btn btn-primary">Erosi</a>
+                <div class="col-sm-3">
+                        <div class="card">
+                            <img src="https://loremflickr.com/320/240/paris" />
+                            <div class="card-body">
+                                <h5 class="card-title">Special title treatment</h5>
+                                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                <a href="#" class="btn btn-primary">Erosi</a>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="col-sm-3">
-                <div class="card">
-                    <img src="https://loremflickr.com/320/240/cat" />
-                    <div class="card-body">
-                        <h5 class="card-title">Special title treatment</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        <a href="#" class="btn btn-primary">Erosi</a>
+                    <div class="col-sm-3">
+                        <div class="card">
+                            <img src="https://loremflickr.com/320/240/madrid" />
+                            <div class="card-body">
+                                <h5 class="card-title">Special title treatment</h5>
+                                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                <a href="#" class="btn btn-primary">Erosi</a>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="col-sm-3">
-                <div class="card">
-                    <img src="https://loremflickr.com/320/240/fish" />
-                    <div class="card-body">
-                        <h5 class="card-title">Special title treatment</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        <a href="#" class="btn btn-primary">Erosi</a>
+                    <div class="col-sm-3">
+                        <div class="card">
+                            <img src="https://loremflickr.com/320/240/caribe" />
+                            <div class="card-body">
+                                <h5 class="card-title">Special title treatment</h5>
+                                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                <a href="#" class="btn btn-primary">Erosi</a>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="col-sm-3">
-                <div class="card">
-                    <img src="https://loremflickr.com/320/240/monkey" />
-                    <div class="card-body">
-                        <h5 class="card-title">Special title treatment</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        <a href="#" class="btn btn-primary">Erosi</a>
+                    <div class="col-sm-3">
+                        <div class="card">
+                            <img src="https://loremflickr.com/320/240/london" />
+                            <div class="card-body">
+                                <h5 class="card-title">Special title treatment</h5>
+                                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                <a href="#" class="btn btn-primary">Erosi</a>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </div>
         </div>
     </div>
 
@@ -110,6 +110,7 @@
     <script src="js/fontawesome-free-all.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.js"></script>
+    <script src="js/jquery-ui.js"></script>
     <script src="app.js"></script>
 </body>
 
